# Inverse_design_CR

./: .gitignore  README.md  artifacts-manifest.json  color-router-inverse-design-blueprint-v1.3.md  common_context_prompt.md  pyproject.toml  repository-structure-mapping.md
configs/: fdtd.yaml  inverse.yaml  paths.example.yaml
prompts/: task-01.prompt.md  task-02.prompt.md  task-03.prompt.md  task-04.prompt.md  task-05.prompt.md  task-06.prompt.md  task-07.prompt.md  task-08.prompt.md  task-09.prompt.md  task-10.prompt.md  task-11.prompt.md
src/crinv/: __init__.py  active_loop.py  artifacts.py  (+22 more)
src/crinv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tasks/: _task-index.md  task-01-project-scaffold-and-config.md  task-02-symmetry-parameterization.md  task-03-rule-based-generator-ste.md  task-04-spectral-banding-and-merge.md  task-05-loss-functions-and-robustness.md  task-06-inverse-optimization-multistart-topk.md  task-07-gds-export.md  task-08-lumerical-fdtd-runner-stability.md  task-09-postprocess-and-ranking.md  task-10-cli-and-integration-verify.md  task-10-local-dashboard-progress-visualization.md  task-11-active-loop-optional.md  task-11-cli-and-integration-verify.md  task-12-active-loop-optional.md
tests/: test_commit_protocol.py  test_config_smoke.py  test_dashboard_spectrum_api.py  test_dataset_io_smoke.py  test_gds_export_smoke.py  test_generator_shapes.py  test_inverse_opt_dryrun.py  test_losses_smoke.py  test_ranking_smoke.py  test_real_surrogate_optional.py  test_seed_symmetry.py  test_spectral_merge_and_bands.py  test_ste_threshold.py
(+9 files in other folders)
